# cmu-africa-hackathon

./: .clang-format  README.md
.devcontainer/: devcontainer.json
docker/: .env  docker-compose.yml
docker/grafana/grafana/provisioning/: datasources.yaml
docker/grafana/loki/: loki.yaml
docker/grafana/mimir/: mimir.yaml
docker/grafana/tempo/: tempo.yaml
docker/otel-collector/: otel-collector-config.yaml
docker/ros_dev/: Dockerfile.dev
examples/opentelemetry_ros2_example_cpp/: CMakeLists.txt  package.xml
examples/opentelemetry_ros2_example_cpp/otel_config/: CMakeLists.txt
examples/opentelemetry_ros2_example_cpp/otel_config/include/otel_config/: otel_provider_context.hpp
examples/opentelemetry_ros2_example_cpp/otel_config/src/: otel_provider_context.cpp
examples/opentelemetry_ros2_example_cpp/simple_process_cpp/: CMakeLists.txt
examples/opentelemetry_ros2_example_cpp/simple_process_cpp/src/: simple_process.cpp
scripts/: install_build_tools.sh  install_dev_tools.sh  install_grpc.sh  install_opentelemetry-cpp.sh  install_opentelemetry-python.sh  install_protobuf.sh  setup_user.sh
